--- a/examples/pipelines/fl_cross_silo_literal/config.yaml
+++ b/examples/pipelines/fl_cross_silo_literal/config.yaml
@@ -12,9 +12,9 @@
 
 # References to Azure ML workspace (use cli args to override)
 aml:
-  # subscription_id: "<SUBSCRIPTION_ID>"
-  # resource_group_name: "<RESOURCE_GROUP>"
-  # workspace_name: "<AML_WORKSPACE_NAME>"
+  "subscription_id": "4fcaeb12-537a-4364-9e34-0e499d30c4c1"
+  "resource_group": "asa-fml"
+  "workspace_name": "aml-fmldemo"
 
 # Parameters to generate the FL graph
 federated_learning:
@@ -25,10 +25,8 @@ federated_learning:
     datastore: "datastore_orchestrator"
 
   silos: # silos are provided as a list
-    - compute: cpu-silo0-westus # name of the compute for silo X
-      datastore: datastore_silo0_westus # name of the datastore for silo X
-      # training inputs are specified below
-      # NOTE: in this demo, we're using public data from a url instead
+    - compute: aml-cmp-arclocal
+      datastore: datastore_silo1_francecentral
       training_data:
         type: uri_file
         mode: 'download'
@@ -38,8 +36,10 @@ federated_learning:
         mode: 'download'
         path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
 
-    - compute: cpu-silo1-francecentral # we are repeating over the same config for silo 2
-      datastore: datastore_silo1_francecentral
+    - compute: cpu-silo0-westus # name of the compute for silo X
+      datastore: datastore_silo0_westus # name of the datastore for silo X
+      # training inputs are specified below
+      # NOTE: in this demo, we're using public data from a url instead
       training_data:
         type: uri_file
         mode: 'download'
