--- a/examples/pipelines/pneumonia/config.yaml
+++ b/examples/pipelines/pneumonia/config.yaml
@@ -13,6 +13,11 @@ federated_learning:
     datastore: "datastore_orchestrator"
 
   silos:
+    - compute: arc-kind-laptop
+      silo_data:
+        type: uri_folder
+        mode: 'direct'
+        path: ./mnt/localdata/ml_data/
     - compute: cpu-silo0-westus
       datastore: datastore_silo0_westus
       silo_data:
