--- a/examples/pipelines/fl_cross_silo_literal/config copy.yaml
+++ b/examples/pipelines/fl_cross_silo_literal/config copy.yaml
@@ -25,8 +25,8 @@ federated_learning:
     datastore: "datastore_orchestrator"
 
   silos: # silos are provided as a list
-    - compute: k8s-arcbox-k3s
-      datastore: datastore_orchestrator
+    - compute: aml-cmp-arclocal
+      datastore: datastore_silo1_francecentral
       # training inputs are specified below
       # NOTE: in this demo, we're using public data from a url instead
       training_data:
@@ -66,6 +66,6 @@ training_parameters:
   num_of_iterations: 2
   
   # then typical training parameters
-  epochs: 9 # number of epochs per iteration (in-silo training) 
+  epochs: 3 # number of epochs per iteration (in-silo training) 
   lr: 0.01 # learning rate
   batch_size: 64 # batch size
