--- a/mlops/k8s_templates/pv.yaml
+++ b/mlops/k8s_templates/pv.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: demolocaldata
+  name: custom_localdata
   labels:
-    app: demolocaldata
+    app: custom_localdata
 spec:
   storageClassName: manual
 
@@ -14,7 +14,7 @@ spec:
   claimRef: # the claimRef is here to provide a "connection" between this pv and the pvc.
     apiVersion: v1
     kind: PersistentVolumeClaim
-    name: demolocaldata 
+    name: custom_localdata 
     namespace: default
   hostPath:
     path: /localdata # the path in the docker file system that we want to expose in k8s 
