--- a/examples/pipelines/fl_cross_silo_literal/config.yaml
+++ b/examples/pipelines/fl_cross_silo_literal/config.yaml
@@ -12,9 +12,9 @@
 
 # References to Azure ML workspace (use cli args to override)
 aml:
-  "subscription_id": "4fcaeb12-537a-4364-9e34-0e499d30c4c1"
-  "resource_group": "asa-fml"
-  "workspace_name": "aml-fmldemo"
+  # "subscription_id": "4fcaeb12-537a-4364-9e34-0e499d30c4c1"
+  # "resource_group": "asa-fml"
+  # "workspace_name": "aml-fmldemo"
 
 # Parameters to generate the FL graph
 federated_learning:
