--- a/examples/pipelines/fl_cross_silo_literal/config.yaml
+++ b/examples/pipelines/fl_cross_silo_literal/config.yaml
@@ -25,10 +25,10 @@ federated_learning:
     datastore: "datastore_orchestrator"
 
   silos: # silos are provided as a list
-    - name: silo0
+    - name: fls1
       computes: 
-      - silo0-01 # name of the compute for silo X
-      datastore: datastore_silo0 # name of the datastore for silo X
+      - fls1-01 # name of the compute for silo X
+      datastore: datastore_fls1 # name of the datastore for silo X
       # training inputs are specified below
       # NOTE: in this demo, we're using public data from a url instead
       training_data:
@@ -40,31 +40,31 @@ federated_learning:
         mode: 'download'
         path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
 
-    - name: silo1
-      computes: 
-      - silo1-01 # we are repeating over the same config for silo 2
-      datastore: datastore_silo1
-      training_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/train.csv
-      testing_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
+    # - name: silo1
+    #   computes: 
+    #   - silo1-01 # we are repeating over the same config for silo 2
+    #   datastore: datastore_silo1
+    #   training_data:
+    #     type: uri_file
+    #     mode: 'download'
+    #     path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/train.csv
+    #   testing_data:
+    #     type: uri_file
+    #     mode: 'download'
+    #     path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
 
-    - name: silo2
-      computes: 
-      - silo2-01 # we are repeating over the same config for silo 3
-      datastore: datastore_silo2
-      training_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/train.csv
-      testing_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
+    # - name: silo2
+    #   computes: 
+    #   - silo2-01 # we are repeating over the same config for silo 3
+    #   datastore: datastore_silo2
+    #   training_data:
+    #     type: uri_file
+    #     mode: 'download'
+    #     path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/train.csv
+    #   testing_data:
+    #     type: uri_file
+    #     mode: 'download'
+    #     path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
 
 # Training parameters
 training_parameters:
