--- a/examples/components/PNEUMONIA/traininsilo/conda.yaml
+++ b/examples/components/PNEUMONIA/traininsilo/conda.yaml
@@ -1,4 +1,4 @@
-name: pneumonia_train_conda_env
+name: mnist_conda_env
 channels:
   - defaults
   - pytorch
@@ -6,10 +6,11 @@ channels:
 dependencies:
   - python=3.8
   - pip=22.3.1
-  - pytorch=1.13.1
-  - torchvision=0.13.1
+  - pytorch=2.0.0
   - pytorch-cuda=11.6
   - pip:
     - azureml-mlflow==1.48.0
+    - pandas==1.5.2
     - opacus==1.3.0
     - tqdm==4.64.1
+    - torchvision==0.15.1
