--- a/examples/pipelines/fl_cross_silo_literal/config.yaml
+++ b/examples/pipelines/fl_cross_silo_literal/config.yaml
@@ -20,15 +20,16 @@ aml:
 federated_learning:
   orchestrator:
     # name of compute for orchestrator
-    compute: "flhsorch-01"
+    compute: "cpu-orchestrator"
     # name of datastore for orchestrator (saving model weights + aggregate)
-    datastore: "datastore_flhsorch"
+    datastore: "datastore_orchestrator"
 
   silos: # silos are provided as a list
-    - name: flx1
+    - name: flaksedgearc
       computes: 
-      - flx1-01 # name of the compute for silo X
-      datastore: datastore_flx1 # name of the datastore for silo X
+      - k8s-flaksedgearc # name of the compute for silo X
+      instance_type: defaultinstancetype
+      datastore: datastore_silo0_northeurope # name of the datastore for silo X
       # training inputs are specified below
       # NOTE: in this demo, we're using public data from a url instead
       training_data:
@@ -39,20 +40,6 @@ federated_learning:
         type: uri_file
         mode: 'download'
         path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
-
-    - name: flx2
-      computes: 
-      - arcbox-k3s # we are repeating over the same config for silo 2
-      datastore: datastore_flx2
-      training_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/train.csv
-      testing_data:
-        type: uri_file
-        mode: 'download'
-        path: https://azureopendatastorage.blob.core.windows.net/mnist/processed/t10k.csv
-
     # - name: silo2
     #   computes: 
     #   - silo2-01 # we are repeating over the same config for silo 3
